2010-02-13 Erwin Waterlander <waterlan@xs4all.nl>
	* Bundle dos2unix and unix2dos in one package.
	* dos2unix/unix2dos : Cleanup messages and manual.
	* unix2dos: Added option -l, --newline.

2010-02-10 Erwin Waterlander <waterlan@xs4all.nl>
	* unix2dos: Makefile : 
	  - Use GNU standard directory variables everywhere.
	  - New target 'dist-tbz' creates bzip2 compressed archive.

2010-02-10 Philipp Thomas <psmt@opensuse.org>
	* unix2dos: po/de.po : Added German translation.
	* unix2dos: Makefile :
	  - Added $(RPM_OPT_FLAGS) to CFLAGS.
	  - Use DESTDIR only in install and uninstall targets (not in variables,
	    this is more common practice).

2010-02-03 Erwin Waterlander <waterlan@xs4all.nl>
	* dos2unix: Makefile : 
	  - Use GNU standard directory variables everywhere.

2010-02-03 Philipp Thomas <psmt@opensuse.org>
	* dos2unix: po/de.po : Added German translation.
	* dos2unix: Makefile :
	  - Use GNU standard directory variable 'datadir' i.s.o. 'sharedir'.
	  - Added $(RPM_OPT_FLAGS) to CFLAGS.
	  - New target 'dist-tbz' creates bzip2 compressed archive.
	  - Use DESTDIR only in install and uninstall targets (not in variables,
	    this is more common practice).

2010-02-02 Erwin Waterlander <waterlan@xs4all.nl>
	* dos2unix/unix2dos: Update Dutch translation.

2010-01-24 Erwin Waterlander <waterlan@xs4all.nl>
	* dos2unix/unix2dos: version 4.1.2

2010-01-22 Tim Waugh <twaugh@redhat.com>
	* dos2unix/unix2dos: Preserve file mode in 'new file mode'.
	* dos2unix/unix2dos: Makefile: Allow CFLAGS to be set externally.

2010-01-21 Erwin Waterlander <waterlan@xs4all.nl>
	* dos2unix/unix2dos: version 4.1.1
	* dos2unix/unix2dos: Fix compilation on FreeBSD.
	* dos2unix/unix2dos: Changed home page URL to http://www.xs4all.nl/~waterlan/dos2unix.html

2009-12-28 Erwin Waterlander <waterlan@xs4all.nl>
	* dos2unix/unix2dos: version 4.1
	* dos2unix/unix2dos: Automatically skip binary files.
	* dos2unix/unix2dos: Automatically skip non-regular files.